--- a/docs/source/notebooks/debug_grid_files.ipynb
+++ b/docs/source/notebooks/debug_grid_files.ipynb
@@ -5,16 +5,15 @@
    "id": "d5d58322-4791-4bff-9c51-916d345e085e",
    "metadata": {},
    "source": [
-    "# Introduction on ``getObsAtmo``, the emulator for atmospheric transparency at Astronomy Observation sites \n",
+    "# Debug Data Grid Files\n",
     "\n",
+    "- Goal check if files are filled correctly\n",
     "- author : Sylvie Dagoret-Campagne\n",
     "- affiliation : IJCLab/IN2P3/CNRS\n",
-    "- creation date : 2023/11/01\n",
-    "- last update : 2023/11/01\n",
-    "- last update : 2024/08/27\n",
-    "\n",
-    "\n",
-    "This emulator is based from datagrid of atmospheric transparencies extracted from libradtran"
+    "- creation date : 2024/08/27\n",
+    "- update : 2024/08/27\n",
+    "- last update : 2025/06/15\n",
+    "- last update : 2025/10/15 : getObsAtmo version 0.2.0"
    ]
   },
   {
@@ -30,14 +29,15 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
-    "\n",
+    "import os,sys\n",
+    "import json\n",
     "# to enlarge the sizes\n",
     "params = {'legend.fontsize': 'large',\n",
     "          'figure.figsize': (12, 6),\n",
-    "         'axes.labelsize': 'xx-large',\n",
-    "         'axes.titlesize':'xx-large',\n",
-    "         'xtick.labelsize':'xx-large',\n",
-    "         'ytick.labelsize':'xx-large'}\n",
+    "         'axes.labelsize': 'x-large',\n",
+    "         'axes.titlesize':'x-large',\n",
+    "         'xtick.labelsize':'x-large',\n",
+    "         'ytick.labelsize':'x-large'}\n",
     "plt.rcParams.update(params)"
    ]
   },
@@ -59,17 +59,141 @@
    "id": "b0a9c40d-f5f4-4aca-b4fa-de020205e534",
    "metadata": {},
    "source": [
-    "# Imports"
+    "## Imports"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f685430-bb32-4285-b556-20db4a226faf",
+   "id": "fba8e43b-43dd-4ae0-8343-15f30b5092d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from getObsAtmo.getObsAtmo import ObsAtmo,Dict_Of_sitesPressures,getObsSiteDataFrame"
+    "import getObsAtmo\n",
+    "from getObsAtmo.getObsAtmo import ObsAtmo,validateObsName,Dict_Of_sitesPressures,_getPackageDir,get_obssite_dataframe,get_obssite_keys,is_obssite\n",
+    "from getObsAtmo.getObsAtmo import convert_dict_to_json,convert_json_to_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf1bdf65-b437-44fc-aee0-134dbd1f0776",
+   "metadata": {},
+   "source": [
+    "## Config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0207cffa-3700-4cca-8497-b63344a68c3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"{getObsAtmo.__name__} version {getObsAtmo._version.__version__}\")\n",
+    "the_version = getObsAtmo._version.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c566935b-8ef9-43f5-bba8-713cf6392e3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OBS_tag = 'LSST'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdf3e2c6-6015-4462-a07a-859f4e5eb0d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_data_dict = {\n",
+    "    \"info\": \"atmospherictransparencygrid_params.json\",\n",
+    "    \"data_rayleigh\": \"atmospherictransparencygrid_rayleigh.npy\",\n",
+    "    \"data_o2abs\": \"atmospherictransparencygrid_O2abs.npy\",\n",
+    "    \"data_pwvabs\": \"atmospherictransparencygrid_PWVabs.npy\",\n",
+    "    \"data_ozabs\": \"atmospherictransparencygrid_OZabs.npy\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8206aaa2-cd57-4fc0-9a65-6efd1861178d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# construct the path of input data file\n",
+    "path = os.path.join(_getPackageDir(), 'obsatmo_data')\n",
+    "info_params = {}\n",
+    "\n",
+    "# load all data files (training and test)\n",
+    "filename = os.path.join(path, OBS_tag + \"_\" + file_data_dict[\"info\"])\n",
+    "with open(filename, 'r') as f:\n",
+    "    loaded_data_json = json.load(f)   \n",
+    "    \n",
+    "info_params = convert_json_to_dict(loaded_data_json)\n",
+    "data_rayleigh = np.load(os.path.join(path, OBS_tag + \"_\" + file_data_dict[\"data_rayleigh\"]))\n",
+    "data_O2abs = np.load(os.path.join(path, OBS_tag + \"_\" + file_data_dict[\"data_o2abs\"]))\n",
+    "data_PWVabs = np.load(os.path.join(path, OBS_tag + \"_\" + file_data_dict[\"data_pwvabs\"]))\n",
+    "data_OZabs = np.load(os.path.join(path, OBS_tag + \"_\" + file_data_dict[\"data_ozabs\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f633d36-06db-4c0f-9b80-b890836bff6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setup training dataset (those used for interpolation)\n",
+    "WLMIN = info_params[\"WLMIN\"]\n",
+    "WLMAX = info_params[\"WLMAX\"]\n",
+    "WLBIN = info_params[\"WLBIN\"]\n",
+    "NWLBIN = info_params['NWLBIN']\n",
+    "WL     = info_params['WL']\n",
+    "OBS = info_params['OBS']\n",
+    "\n",
+    "AIRMASSMIN = info_params['AIRMASSMIN']\n",
+    "AIRMASSMAX = info_params['AIRMASSMAX']\n",
+    "NAIRMASS = info_params['NAIRMASS']\n",
+    "DAIRMASS = info_params['DAIRMASS']\n",
+    "AIRMASS = info_params['AIRMASS']\n",
+    "\n",
+    "PWVMIN = info_params['PWVMIN']\n",
+    "PWVMAX = info_params['PWVMAX']\n",
+    "NPWV = info_params['NPWV']\n",
+    "DPWV = info_params['DPWV']\n",
+    "PWV = info_params['PWV']\n",
+    "\n",
+    "OZMIN = info_params['OZMIN']\n",
+    "OZMAX = info_params['OZMAX']\n",
+    "NOZ = info_params['NOZ']\n",
+    "DOZ = info_params['DOZ']\n",
+    "OZ = info_params['OZ']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "421c4427-07eb-4251-8814-3486bed219a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_PWVabs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baafc31c-a20f-49b0-8b5f-49b639f90004",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_PWVabs.min()"
    ]
   },
   {
@@ -212,7 +336,7 @@
     "        ax.plot(WL,transm1,\":\",color=hls_colors[idx])\n",
     "        ax.plot(WL,transm2,\"-\",color=hls_colors[idx])\n",
     "    \n",
-    "title = f\"ObsAtmo : Rayleigh scattering for different pressures\"\n",
+    "title = f\"ObsAtmo : Rayleigh scattering for different pressures (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -251,7 +375,7 @@
     "        ax.plot(WL,transm2,\"-\",color=hls_colors[idx])\n",
     "        \n",
     "\n",
-    "title = f\"ObsAtmo : O2 absorption for different pressures\"\n",
+    "title = f\"ObsAtmo : O2 absorption for different pressures (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -293,7 +417,7 @@
     "        ax.plot(WL,transm2,\"-\",color=hls_colors[idx])\n",
     "        \n",
     "\n",
-    "title = f\"ObsAtmo : O2 absorption for different pressures\"\n",
+    "title = f\"ObsAtmo : O2 absorption for different pressures (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -354,7 +478,7 @@
     "        ax.plot(WL,transm2,\"-\",color=hls_colors[idx])\n",
     "        \n",
     "\n",
-    "title = f\"ObsAtmo : H2O absorption for different pressures, am = {am:.1f}\"\n",
+    "title = f\"ObsAtmo : H2O absorption for different pressures, am = {am:.1f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -412,7 +536,7 @@
     "        ax.plot(WL,transm2,\"-\",color=hls_colors[idx])\n",
     "        \n",
     "\n",
-    "title = f\" ObsAtmo : Ozone absorption for different pressure, am = {am:.1f}\"\n",
+    "title = f\" ObsAtmo : Ozone absorption for different pressure, am = {am:.1f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -459,7 +583,7 @@
     "ax.plot(WL,transm1,'b-',label=label1)\n",
     "ax.plot(WL,transm2,'r-',label=label2)\n",
     "\n",
-    "title = f\"ObsAtmo  : total transmission, am = {am0:.1f}\"\n",
+    "title = f\"ObsAtmo  : total transmission, am = {am0:.1f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -491,7 +615,7 @@
     "ax.plot(WL,transm1,'b-',label=label1)\n",
     "ax.plot(WL,transm2,'r-',label=label2)\n",
     "\n",
-    "title = f\"ObsAtmo  : total transmission, am = {am0:.1f}\"\n",
+    "title = f\"ObsAtmo  : total transmission, am = {am0:.1f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -535,7 +659,7 @@
     "    transm = emul1.GetAerosolsTransparencies(WL,am,tau) \n",
     "    label = r\"$\\tau$ =\" + f\"{tau:.2f}\"\n",
     "    ax.plot(WL,transm,color=hls_colors[index],label=label)\n",
-    "title = f\"ObsAtmo  : aerosol transmission, airmass = {am:.1f}\"\n",
+    "title = f\"ObsAtmo  : aerosol transmission, airmass = {am:.1f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -572,7 +696,7 @@
     "    transm = emul1.GetAerosolsTransparencies(WL,am,tau,beta) \n",
     "    label = r\"$\\beta$ =\" + f\"{beta:.2f}\"\n",
     "    ax.plot(WL,transm,color=hls_colors[index],label=label)\n",
-    "title = f\"ObsAtmo  : aerosol transmission, airmass = {am:.1f}, tau = {tau:.2f}\"\n",
+    "title = f\"ObsAtmo  : aerosol transmission, airmass = {am:.1f}, tau = {tau:.2f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -643,7 +767,7 @@
     "    transm = emul.GetAllTransparencies(WL,am,pwv,oz,tau,beta)\n",
     "    ax.plot(WL,transm,'-',color=hls_colors[idx],label=label)\n",
     "\n",
-    "title = f\"ObsAtmo  : total transmission, airmass = {am:.1f}\"\n",
+    "title = f\"ObsAtmo  : total transmission, airmass = {am:.1f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -681,7 +805,7 @@
     "    transm = emul.GetAllTransparencies(WL,am,pwv,oz,tau,beta)\n",
     "    ax.plot(WL,transm,'-',color=hls_colors[idx],label=label)\n",
     "\n",
-    "title = f\"ObsAtmo  : total transmission, airmass = {am:.1f}\"\n",
+    "title = f\"ObsAtmo  : total transmission, airmass = {am:.1f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -695,9 +819,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_py310",
+   "display_name": "conda_py312_getobsatmo",
    "language": "python",
-   "name": "conda_py310"
+   "name": "conda_py312_getobsatmo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -709,7 +833,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.12"
   },
   "vscode": {
    "interpreter": {
