--- a/docs/source/notebooks/plot_notebook.ipynb
+++ b/docs/source/notebooks/plot_notebook.ipynb
@@ -9,10 +9,10 @@
     "\n",
     "- author : Sylvie Dagoret-Campagne\n",
     "- affiliation : IJCLab/IN2P3/CNRS\n",
-    "- creation date : 2023/11/01\n",
-    "- last update : 2023/11/01\n",
-    "- last update : 2024/08/27\n",
-    "\n",
+    "- creation date : 2023/12/02\n",
+    "- update : 2024/08/27\n",
+    "- last update : 2025/06/15\n",
+    "- last update : 2025/10/15 : getObsAtmo version 0.2.0\n",
     "\n",
     "This emulator is based from datagrid of atmospheric transparencies extracted from libradtran"
    ]
@@ -65,11 +65,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f685430-bb32-4285-b556-20db4a226faf",
+   "id": "f17c00f4-b011-4b9c-ba9f-83d375a1e0d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from getObsAtmo.getObsAtmo import ObsAtmo,Dict_Of_sitesPressures,getObsSiteDataFrame"
+    "import getObsAtmo\n",
+    "from getObsAtmo.getObsAtmo import ObsAtmo,validateObsName,Dict_Of_sitesPressures,_getPackageDir,get_obssite_dataframe,get_obssite_keys,is_obssite"
    ]
   },
   {
@@ -77,7 +78,43 @@
    "id": "ae725422-ec9e-4ee4-bc95-012499cf117c",
    "metadata": {},
    "source": [
-    "# Check information"
+    "## Check information"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9838dae2-8e70-4d09-bdd0-abe3ecc5658d",
+   "metadata": {},
+   "source": [
+    "### getObsAtmo version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "951d6cec-6570-4012-9c99-f0c80cfb26cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"{getObsAtmo.__name__} version {getObsAtmo._version.__version__}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7891457-e04c-40f5-94f6-15f8a0198f18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "the_version = getObsAtmo._version.__version__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fb62291-57b4-4e63-aa58-0c3fb6a4dedb",
+   "metadata": {},
+   "source": [
+    "### Dictionnary"
    ]
   },
   {
@@ -109,7 +146,8 @@
    },
    "outputs": [],
    "source": [
-    "obs_str = 'LSST'\n",
+    "obssitename = 'AuxTel '\n",
+    "obs_str = validateObsName(obssitename) \n",
     "std_pressure = Dict_Of_sitesPressures[obs_str]\n",
     "new_pressure = Dict_Of_sitesPressures[obs_str]*1.1\n",
     "print(new_pressure)\n",
@@ -125,8 +163,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emul1 =  ObsAtmo(obs_str=obs_str)\n",
-    "emul2 =  ObsAtmo(obs_str=obs_str,pressure = new_pressure)"
+    "emul1 =  ObsAtmo(obs_str= obssitename)\n",
+    "emul2 =  ObsAtmo(obs_str= obssitename,pressure = new_pressure)"
    ]
   },
   {
@@ -212,7 +250,7 @@
     "        ax.plot(WL,transm1,\":\",color=hls_colors[idx])\n",
     "        ax.plot(WL,transm2,\"-\",color=hls_colors[idx])\n",
     "    \n",
-    "title = f\"ObsAtmo : Rayleigh scattering for different pressures\"\n",
+    "title = f\"ObsAtmo : Rayleigh scattering for different pressures (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -251,7 +289,7 @@
     "        ax.plot(WL,transm2,\"-\",color=hls_colors[idx])\n",
     "        \n",
     "\n",
-    "title = f\"ObsAtmo : O2 absorption for different pressures\"\n",
+    "title = f\"ObsAtmo : O2 absorption for different pressures (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -293,7 +331,7 @@
     "        ax.plot(WL,transm2,\"-\",color=hls_colors[idx])\n",
     "        \n",
     "\n",
-    "title = f\"ObsAtmo : O2 absorption for different pressures\"\n",
+    "title = f\"ObsAtmo : O2 absorption for different pressures (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -354,7 +392,7 @@
     "        ax.plot(WL,transm2,\"-\",color=hls_colors[idx])\n",
     "        \n",
     "\n",
-    "title = f\"ObsAtmo : H2O absorption for different pressures, am = {am:.1f}\"\n",
+    "title = f\"ObsAtmo : H2O absorption for different pressures, am = {am:.1f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -364,6 +402,16 @@
     "ax.grid()\n",
     "ax.legend()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bab0556-89a8-41b9-9b4b-26da13784960",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pwvs"
    ]
   },
   {
@@ -412,7 +460,7 @@
     "        ax.plot(WL,transm2,\"-\",color=hls_colors[idx])\n",
     "        \n",
     "\n",
-    "title = f\" ObsAtmo : Ozone absorption for different pressure, am = {am:.1f}\"\n",
+    "title = f\" ObsAtmo : Ozone absorption for different pressure, am = {am:.1f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -459,7 +507,7 @@
     "ax.plot(WL,transm1,'b-',label=label1)\n",
     "ax.plot(WL,transm2,'r-',label=label2)\n",
     "\n",
-    "title = f\"ObsAtmo  : total transmission, am = {am0:.1f}\"\n",
+    "title = f\"ObsAtmo : total transmission, am = {am0:.1f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -491,7 +539,7 @@
     "ax.plot(WL,transm1,'b-',label=label1)\n",
     "ax.plot(WL,transm2,'r-',label=label2)\n",
     "\n",
-    "title = f\"ObsAtmo  : total transmission, am = {am0:.1f}\"\n",
+    "title = f\"ObsAtmo : total transmission, am = {am0:.1f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -535,7 +583,7 @@
     "    transm = emul1.GetAerosolsTransparencies(WL,am,tau) \n",
     "    label = r\"$\\tau$ =\" + f\"{tau:.2f}\"\n",
     "    ax.plot(WL,transm,color=hls_colors[index],label=label)\n",
-    "title = f\"ObsAtmo  : aerosol transmission, airmass = {am:.1f}\"\n",
+    "title = f\"ObsAtmo : aerosol transmission, airmass = {am:.1f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -572,7 +620,7 @@
     "    transm = emul1.GetAerosolsTransparencies(WL,am,tau,beta) \n",
     "    label = r\"$\\beta$ =\" + f\"{beta:.2f}\"\n",
     "    ax.plot(WL,transm,color=hls_colors[index],label=label)\n",
-    "title = f\"ObsAtmo  : aerosol transmission, airmass = {am:.1f}, tau = {tau:.2f}\"\n",
+    "title = f\"ObsAtmo : aerosol transmission, airmass = {am:.1f}, tau = {tau:.2f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -588,7 +636,7 @@
    "id": "091ffb3c-bac4-432f-9378-4aef4c497d8d",
    "metadata": {},
    "source": [
-    "# The standard way to call atmospheric transmission"
+    "## The standard way to call atmospheric transmission"
    ]
   },
   {
@@ -643,7 +691,7 @@
     "    transm = emul.GetAllTransparencies(WL,am,pwv,oz,tau,beta)\n",
     "    ax.plot(WL,transm,'-',color=hls_colors[idx],label=label)\n",
     "\n",
-    "title = f\"ObsAtmo  : total transmission, airmass = {am:.1f}\"\n",
+    "title = f\"ObsAtmo : total transmission, airmass = {am:.1f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -681,7 +729,7 @@
     "    transm = emul.GetAllTransparencies(WL,am,pwv,oz,tau,beta)\n",
     "    ax.plot(WL,transm,'-',color=hls_colors[idx],label=label)\n",
     "\n",
-    "title = f\"ObsAtmo  : total transmission, airmass = {am:.1f}\"\n",
+    "title = f\"ObsAtmo : total transmission, airmass = {am:.1f} (version {the_version})\"\n",
     "ax.set_title(title)\n",
     "ax.set_xlabel(\"$\\lambda$ (nm)\")\n",
     "ax.set_ylabel(\"transmission\")\n",
@@ -695,9 +743,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_py310",
+   "display_name": "conda_py312_getobsatmo",
    "language": "python",
-   "name": "conda_py310"
+   "name": "conda_py312_getobsatmo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -709,7 +757,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.12"
   },
   "vscode": {
    "interpreter": {
