--- a/docs/source/notebooks/tests_basics.ipynb
+++ b/docs/source/notebooks/tests_basics.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "559e0924-86bd-43db-a01e-52081365ec60",
    "metadata": {},
    "outputs": [],
@@ -36,10 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9b2a0d23-cd42-48b3-801f-afd8a310936c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getObsAtmo version 0.2.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"{getObsAtmo.__name__} version {getObsAtmo._version.__version__}\")"
    ]
@@ -54,10 +62,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bb4a4fcc-e721-455e-9719-1aff73573b02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/dagoret/MacOSX/GitHub/LSST/2025/getObsAtmo/getObsAtmo'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "_getPackageDir()"
    ]
@@ -72,12 +91,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8bf39dcb-64b2-4ef9-a34e-5066d58c7959",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'LSST': 731.50433,\n",
+       " 'CTIO': 774.6052,\n",
+       " 'OHP': 937.22595,\n",
+       " 'ZTF': 823.60004,\n",
+       " 'VLT': 734.08038,\n",
+       " 'PDM': 710.90637,\n",
+       " 'OMK': 600.17224,\n",
+       " 'OSL': 1013.0}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Dict_Of_sitesPressures"
    ]
@@ -92,17 +129,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c8e905f7-217b-4a94-9aa5-f666a182f446",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     altitude   pressure\n",
+      "LSST    2.663  731.50433\n",
+      "CTIO    2.207   774.6052\n",
+      "OHP      0.65  937.22595\n",
+      "ZTF     1.712  823.60004\n",
+      "VLT     2.635  734.08038\n",
+      "PDM    2.8905  710.90637\n",
+      "OMK     4.205  600.17224\n",
+      "OSL       0.0     1013.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(get_obssite_dataframe())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bd14d37f-e514-4061-9d71-3cc5009971a4",
    "metadata": {},
    "outputs": [],
@@ -112,20 +165,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fc3b2bc0-8588-4311-a98a-246bd3f571b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['LSST', 'CTIO', 'OHP', 'ZTF', 'VLT', 'PDM', 'OMK', 'OSL'], dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "88329e10-d9f2-4a64-9aaa-37f3c4aa3930",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     True\n",
+       "1    False\n",
+       "2    False\n",
+       "3    False\n",
+       "4    False\n",
+       "5    False\n",
+       "6    False\n",
+       "7    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_obssite_keys('lsst')"
    ]
@@ -140,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c1a142e8-4c15-41be-a427-5f421340ca2f",
    "metadata": {},
    "outputs": [],
@@ -150,20 +233,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5340a52e-3266-425f-b81e-84b5490ac39d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_obssite('LSST')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fe6a9e77-e4b3-4f4c-aacd-4ae2276fbc3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_obssite('AUXTEL')"
    ]
@@ -178,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "14394583-3853-4c06-bdcb-79dfd6946932",
    "metadata": {},
    "outputs": [],
@@ -188,17 +293,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "7aae351a-5375-4711-b16e-ccc2a350941c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Atmospheric emulator ObsAtmo for observation site LSST'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.Name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "92c82ec3-f9b1-4cae-9624-f418658ed1dd",
    "metadata": {},
    "outputs": [],
@@ -208,17 +324,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c1856497-6734-47c5-9c1b-5bbf055c211f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Atmospheric emulator ObsAtmo for observation site CTIO'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.Name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6ca0e88b-e605-4068-a144-ce77b1ba283c",
    "metadata": {},
    "outputs": [],
@@ -228,17 +355,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "bba0bceb-14b2-4879-9652-e269ef2e500c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Atmospheric emulator ObsAtmo for observation site LSST'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.Name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "74050069-a27d-4d6b-bae3-c02cba666274",
    "metadata": {},
    "outputs": [],
@@ -248,10 +386,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "7246be3c-f43c-41f0-892d-9728fbd2acbd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Atmospheric emulator ObsAtmo for observation site LSST'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.Name"
    ]
@@ -266,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "88c4ee68-99e9-482b-b59e-6ed90c367369",
    "metadata": {},
    "outputs": [],
@@ -280,10 +429,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b6a0fda3-42ba-40ef-9e76-1fd6d206b975",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wavelengths (nm) \t =  [400.0, 800.0, 900.0]\n",
+      "transmissions    \t =  [0.72485491 0.97330618 0.85675228]\n"
+     ]
+    }
+   ],
    "source": [
     "    >>> print(\"wavelengths (nm) \\t = \",wl)\n",
     "    >>> print(\"transmissions    \\t = \",transm)    "
@@ -291,27 +449,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "718fcef4-d72d-4e3f-8aa0-b4e5e49c6ce0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[400.0, 800.0, 900.0]\n"
+     ]
+    }
+   ],
    "source": [
     "print(wl)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "cdda946f-6f46-4355-b92c-c9043116596d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.72485491 0.97330618 0.85675228]\n"
+     ]
+    }
+   ],
    "source": [
     "print(transm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "78f4cd88-f5df-4dc5-8164-ce7d564bbd00",
    "metadata": {},
    "outputs": [],
@@ -322,10 +496,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "4dba3df6-22b3-4420-acc7-11175373e3f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.41483073, 0.76797745, 0.95170851, 0.98476396, 0.9937721 ])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "array"
    ]
@@ -340,50 +525,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "b7da7ff1-13ae-4b7b-aea4-1d3ae142c396",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([300.        , 301.00125156, 302.00250313, 303.00375469,\n",
+       "       304.00500626, 305.00625782, 306.00750939, 307.00876095,\n",
+       "       308.01001252, 309.01126408])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.WL[0:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "e86e6616-6c97-4553-8ef9-3d8f49296b18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1090.98873592, 1091.98998748, 1092.99123905, 1093.99249061,\n",
+       "       1094.99374218, 1095.99499374, 1096.99624531, 1097.99749687,\n",
+       "       1098.99874844, 1100.        ])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.WL[-10:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3f872c8e-f5a7-45d0-b8f4-117908978355",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1. , 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2. , 2.1, 2.2,\n",
+       "       2.3, 2.4, 2.5, 2.6])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.AIRMASS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "3cf35430-a16a-4f28-a5cc-a6f70da0a503",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.  ,  0.25,  0.5 ,  0.75,  1.  ,  1.25,  1.5 ,  1.75,  2.  ,\n",
+       "        2.25,  2.5 ,  2.75,  3.  ,  3.25,  3.5 ,  3.75,  4.  ,  4.25,\n",
+       "        4.5 ,  4.75,  5.  ,  5.25,  5.5 ,  5.75,  6.  ,  6.25,  6.5 ,\n",
+       "        6.75,  7.  ,  7.25,  7.5 ,  7.75,  8.  ,  8.25,  8.5 ,  8.75,\n",
+       "        9.  ,  9.25,  9.5 ,  9.75, 10.  , 10.25, 10.5 , 10.75, 11.  ,\n",
+       "       11.25, 11.5 , 11.75, 12.  , 12.25, 12.5 , 12.75, 13.  , 13.25,\n",
+       "       13.5 , 13.75, 14.  , 14.25, 14.5 , 14.75, 15.  , 15.25, 15.5 ,\n",
+       "       15.75, 16.  , 16.25, 16.5 , 16.75, 17.  , 17.25, 17.5 , 17.75,\n",
+       "       18.  , 18.25, 18.5 , 18.75, 19.  , 19.25, 19.5 , 19.75, 20.  ,\n",
+       "       20.25])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.PWV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "7dfbbbcc-9448-4798-b2eb-d999f63354d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0.,  25.,  50.,  75., 100., 125., 150., 175., 200., 225., 250.,\n",
+       "       275., 300., 325., 350., 375., 400., 425., 450., 475., 500., 525.,\n",
+       "       550., 575., 600., 625.])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.OZ"
    ]
