add analytical models and compareRayleighScattAnalyticalModel_notebook.ipynb

--- a/docs/source/notebooks/ConvertJsonToPickle.ipynb
+++ b/docs/source/notebooks/ConvertJsonToPickle.ipynb
@@ -16,7 +16,7 @@
     "- author : Sylvie Dagoret-Campagne\n",
     "- affiliation : IJCLab/IN2P3/CNRS\n",
     "- creation date : 2025/10/15\n",
-    "- last update : 2025/10/15 : getObsAtmo version 0.2.0"
+    "- last update : 2025/10/17 : getObsAtmo version 0.2.2"
    ]
   },
   {
@@ -42,43 +42,8 @@
    "outputs": [],
    "source": [
     "import getObsAtmo\n",
-    "from getObsAtmo.getObsAtmo import ObsAtmo,validateObsName,Dict_Of_sitesPressures,_getPackageDir,get_obssite_dataframe,get_obssite_keys,is_obssite\n",
+    "from getObsAtmo.getObsAtmo import ObsAtmo,validateObsName,Dict_Of_sitesPressures,_getPackageDir,get_obssite_dataframe,get_obssite_keys,is_obssite,file_data_dict\n",
     "from getObsAtmo.getObsAtmo import convert_dict_to_json,convert_json_to_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "__all__ = ['Dict_Of_sitesAltitudes',\n",
-    "           'Dict_Of_sitesPressures',\n",
-    "           'Dict_Of_sitesAliases',\n",
-    "           'file_data_dict',\n",
-    "           '_getPackageDir',\n",
-    "           'get_obssite_keys',\n",
-    "           'sanitizeString',\n",
-    "           'validateObsName', \n",
-    "           'is_obssite', \n",
-    "           'ObsAtmo','ObsAtmoPressure','ObsAtmoGrid']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_data_dict = {\n",
-    "    \"info\": \"atmospherictransparencygrid_params.json\",\n",
-    "    \"data_rayleigh\": \"atmospherictransparencygrid_rayleigh.npy\",\n",
-    "    \"data_o2abs\": \"atmospherictransparencygrid_O2abs.npy\",\n",
-    "    \"data_pwvabs\": \"atmospherictransparencygrid_PWVabs.npy\",\n",
-    "    \"data_ozabs\": \"atmospherictransparencygrid_OZabs.npy\",\n",
-    "}"
    ]
   },
   {
@@ -99,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "8",
    "metadata": {},
    "outputs": [
@@ -107,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "getObsAtmo version 0.2.1\n"
+      "getObsAtmo version 0.2.2\n"
      ]
     }
    ],
@@ -125,12 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#all_OBS_tag = ['CTIO','OSL','LSST','PDM','OHP','VLT','OMK','ZTF']\n",
     "df = get_obssite_dataframe()\n",
     "all_OBS_tag = df.index "
    ]
@@ -145,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "12",
    "metadata": {},
    "outputs": [],
@@ -164,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "14",
    "metadata": {},
    "outputs": [],
