--- a/docs/source/notebooks/ConvertPicklesToJson.ipynb
+++ b/docs/source/notebooks/ConvertPicklesToJson.ipynb
@@ -16,7 +16,7 @@
     "- author : Sylvie Dagoret-Campagne\n",
     "- affiliation : IJCLab/IN2P3/CNRS\n",
     "- creation date : 2025/10/15\n",
-    "- last update : 2025/10/15 : getObsAtmo version 0.2.0"
+    "- last update : 2025/10/17 : getObsAtmo version 0.2.2"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "import getObsAtmo\n",
-    "from getObsAtmo.getObsAtmo import ObsAtmo,validateObsName,Dict_Of_sitesPressures,_getPackageDir,get_obssite_dataframe,get_obssite_keys,is_obssite"
+    "from getObsAtmo.getObsAtmo import ObsAtmo,validateObsName,Dict_Of_sitesPressures,_getPackageDir,get_obssite_dataframe,get_obssite_keys,is_obssite,file_data_dict"
    ]
   },
   {
@@ -62,13 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_data_dict = {\n",
-    "    \"info\": \"atmospherictransparencygrid_params.pickle\",\n",
-    "    \"data_rayleigh\": \"atmospherictransparencygrid_rayleigh.npy\",\n",
-    "    \"data_o2abs\": \"atmospherictransparencygrid_O2abs.npy\",\n",
-    "    \"data_pwvabs\": \"atmospherictransparencygrid_PWVabs.npy\",\n",
-    "    \"data_ozabs\": \"atmospherictransparencygrid_OZabs.npy\",\n",
-    "}"
+    "file_data_dict[\"info\"] = file_data_dict[\"info\"].replace(\".json\",\".pickle\") "
    ]
   },
   {
@@ -97,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "getObsAtmo version 0.2.1\n"
+      "getObsAtmo version 0.2.2\n"
      ]
     }
    ],
@@ -120,7 +114,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#all_OBS_tag = ['CTIO','OSL','LSST','PDM','OHP','VLT','OMK','ZTF']\n",
     "df = get_obssite_dataframe()\n",
     "all_OBS_tag = df.index "
    ]
