try python version 3.13 and 3.14

--- a/docs/source/notebooks/ConvertPicklesToJson.ipynb
+++ b/docs/source/notebooks/ConvertPicklesToJson.ipynb
@@ -159,6 +159,7 @@
     "    # load all data files (training and test)\n",
     "    #input_filename = os.path.join(path, OBS_tag + \"_\" + file_data_dict[\"info\"])\n",
     "    input_filename = os.path.join(\".\", OBS_tag + \"_\" + file_data_dict[\"info\"])\n",
+    "    input_filename = os.path.basename(input_filename).split(\".\")[0]+\".pickle\"\n",
     "    output_filename = os.path.basename(input_filename).split(\".\")[0]+\".json\"\n",
     "\n",
     "    with open(input_filename, 'rb') as f:\n",
