--- a/examples/notebooks/ConvertJsonToPickle.ipynb
+++ b/examples/notebooks/ConvertJsonToPickle.ipynb
@@ -42,48 +42,13 @@
    "outputs": [],
    "source": [
     "import getObsAtmo\n",
-    "from getObsAtmo.getObsAtmo import ObsAtmo,validateObsName,Dict_Of_sitesPressures,_getPackageDir,get_obssite_dataframe,get_obssite_keys,is_obssite\n",
+    "from getObsAtmo.getObsAtmo import ObsAtmo,validateObsName,Dict_Of_sitesPressures,_getPackageDir,get_obssite_dataframe,get_obssite_keys,is_obssite,file_data_dict \n",
     "from getObsAtmo.getObsAtmo import convert_dict_to_json,convert_json_to_dict"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "__all__ = ['Dict_Of_sitesAltitudes',\n",
-    "           'Dict_Of_sitesPressures',\n",
-    "           'Dict_Of_sitesAliases',\n",
-    "           'file_data_dict',\n",
-    "           '_getPackageDir',\n",
-    "           'get_obssite_keys',\n",
-    "           'sanitizeString',\n",
-    "           'validateObsName', \n",
-    "           'is_obssite', \n",
-    "           'ObsAtmo','ObsAtmoPressure','ObsAtmoGrid']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_data_dict = {\n",
-    "    \"info\": \"atmospherictransparencygrid_params.json\",\n",
-    "    \"data_rayleigh\": \"atmospherictransparencygrid_rayleigh.npy\",\n",
-    "    \"data_o2abs\": \"atmospherictransparencygrid_O2abs.npy\",\n",
-    "    \"data_pwvabs\": \"atmospherictransparencygrid_PWVabs.npy\",\n",
-    "    \"data_ozabs\": \"atmospherictransparencygrid_OZabs.npy\",\n",
-    "}"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "4",
    "metadata": {},
    "source": [
     "## Config"
@@ -91,10 +56,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "5",
    "metadata": {},
    "source": [
     "### version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getObsAtmo version 0.2.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{getObsAtmo.__name__} version {getObsAtmo._version.__version__}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7",
+   "metadata": {},
+   "source": [
+    "### Observatories"
    ]
   },
   {
@@ -104,7 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"{getObsAtmo.__name__} version {getObsAtmo._version.__version__}\")"
+    "df = get_obssite_dataframe()\n",
+    "all_OBS_tag = df.index "
    ]
   },
   {
@@ -112,7 +104,7 @@
    "id": "9",
    "metadata": {},
    "source": [
-    "### Observatories"
+    "### data path"
    ]
   },
   {
@@ -122,33 +114,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#all_OBS_tag = ['CTIO','OSL','LSST','PDM','OHP','VLT','OMK','ZTF']\n",
-    "df = get_obssite_dataframe()\n",
-    "all_OBS_tag = df.index "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "11",
-   "metadata": {},
-   "source": [
-    "### data path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# construct the path of input data file\n",
     "path = os.path.join(_getPackageDir(), 'obsatmo_data')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "11",
    "metadata": {},
    "source": [
     "## Generate files"
@@ -157,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,9 +156,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_py312_getobsatmo",
+   "display_name": "conda_py314",
    "language": "python",
-   "name": "conda_py312_getobsatmo"
+   "name": "conda_py314"
   },
   "language_info": {
    "codemirror_mode": {
@@ -198,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
