--- a/examples/notebooks/ConvertPicklesToJson.ipynb
+++ b/examples/notebooks/ConvertPicklesToJson.ipynb
@@ -16,7 +16,9 @@
     "- author : Sylvie Dagoret-Campagne\n",
     "- affiliation : IJCLab/IN2P3/CNRS\n",
     "- creation date : 2025/10/15\n",
-    "- last update : 2025/10/15 : getObsAtmo version 0.2.0"
+    "- last update : 2025/10/15 : getObsAtmo version 0.2.0\n",
+    "- last update : 2025/10/18 : getObsAtmo version 0.2.2\n",
+    "- input in notebooks directory (must run ConvertJsonToPickle.ipynb before this notebook)"
    ]
   },
   {
@@ -42,7 +44,7 @@
    "outputs": [],
    "source": [
     "import getObsAtmo\n",
-    "from getObsAtmo.getObsAtmo import ObsAtmo,validateObsName,Dict_Of_sitesPressures,_getPackageDir,get_obssite_dataframe,get_obssite_keys,is_obssite"
+    "from getObsAtmo.getObsAtmo import ObsAtmo,validateObsName,Dict_Of_sitesPressures,_getPackageDir,get_obssite_dataframe,get_obssite_keys,is_obssite,file_data_dict"
    ]
   },
   {
@@ -56,24 +58,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_data_dict = {\n",
-    "    \"info\": \"atmospherictransparencygrid_params.pickle\",\n",
-    "    \"data_rayleigh\": \"atmospherictransparencygrid_rayleigh.npy\",\n",
-    "    \"data_o2abs\": \"atmospherictransparencygrid_O2abs.npy\",\n",
-    "    \"data_pwvabs\": \"atmospherictransparencygrid_PWVabs.npy\",\n",
-    "    \"data_ozabs\": \"atmospherictransparencygrid_OZabs.npy\",\n",
-    "}"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "source": [
     "## Config"
@@ -81,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "source": [
     "### version"
@@ -90,16 +76,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getObsAtmo version 0.2.2\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"{getObsAtmo.__name__} version {getObsAtmo._version.__version__}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "source": [
     "### Observatories"
@@ -108,18 +102,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#all_OBS_tag = ['CTIO','OSL','LSST','PDM','OHP','VLT','OMK','ZTF']\n",
     "df = get_obssite_dataframe()\n",
     "all_OBS_tag = df.index "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "source": [
     "### data path"
@@ -128,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,10 +131,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "source": [
     "## Generate files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'info': 'atmospherictransparencygrid_params.json',\n",
+       " 'data_rayleigh': 'atmospherictransparencygrid_rayleigh.npy',\n",
+       " 'data_o2abs': 'atmospherictransparencygrid_O2abs.npy',\n",
+       " 'data_pwvabs': 'atmospherictransparencygrid_PWVabs.npy',\n",
+       " 'data_ozabs': 'atmospherictransparencygrid_OZabs.npy'}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_data_dict"
    ]
   },
   {
@@ -155,9 +173,9 @@
     "\n",
     "    info_params = {}\n",
     "\n",
-    "    # load all data files (training and test)\n",
-    "    #input_filename = os.path.join(path, OBS_tag + \"_\" + file_data_dict[\"info\"])\n",
-    "    input_filename = os.path.join(\".\", OBS_tag + \"_\" + file_data_dict[\"info\"])\n",
+    "    # picle inputs are in this  notebook directory (after running ConvertJsonToPickle.ipynb)\n",
+    "    input_filename = os.path.join(\"./\", OBS_tag + \"_\" + file_data_dict[\"info\"])\n",
+    "    input_filename = os.path.basename(input_filename).split(\".\")[0]+\".pickle\"\n",
     "    output_filename = os.path.basename(input_filename).split(\".\")[0]+\".json\"\n",
     "\n",
     "    with open(input_filename, 'rb') as f:\n",
@@ -172,13 +190,21 @@
     "        loaded_data_json = json.load(f)\n",
     "    data = convert_json_to_dict(loaded_data_json)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_py312_getobsatmo",
+   "display_name": "conda_py314",
    "language": "python",
-   "name": "conda_py312_getobsatmo"
+   "name": "conda_py314"
   },
   "language_info": {
    "codemirror_mode": {
@@ -190,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
