--- a/docs/source/notebooks/ConvertJsonToPickle.ipynb
+++ b/docs/source/notebooks/ConvertJsonToPickle.ipynb
@@ -156,9 +156,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_py312_getobsatmo",
+   "display_name": "conda_py314",
    "language": "python",
-   "name": "conda_py312_getobsatmo"
+   "name": "conda_py314"
   },
   "language_info": {
    "codemirror_mode": {
@@ -170,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
