--- a/examples/notebooks/tests_basics.ipynb
+++ b/examples/notebooks/tests_basics.ipynb
@@ -39,7 +39,15 @@
    "execution_count": null,
    "id": "3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getObsAtmo version 0.2.2\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"{getObsAtmo.__name__} version {getObsAtmo._version.__version__}\")"
    ]
@@ -57,7 +65,18 @@
    "execution_count": null,
    "id": "5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/dagoret/MacOSX/GitHub/LSST/2025/getObsAtmo/getObsAtmo'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "_getPackageDir()"
    ]
@@ -77,7 +96,25 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'LSST': 731.50433,\n",
+       " 'CTIO': 774.6052,\n",
+       " 'OHP': 937.22595,\n",
+       " 'ZTF': 823.60004,\n",
+       " 'VLT': 734.08038,\n",
+       " 'PDM': 710.90637,\n",
+       " 'OMK': 600.17224,\n",
+       " 'OSL': 1013.0}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Dict_Of_sitesPressures"
    ]
@@ -95,7 +132,23 @@
    "execution_count": null,
    "id": "9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     altitude   pressure\n",
+      "LSST    2.663  731.50433\n",
+      "CTIO    2.207   774.6052\n",
+      "OHP      0.65  937.22595\n",
+      "ZTF     1.712  823.60004\n",
+      "VLT     2.635  734.08038\n",
+      "PDM    2.8905  710.90637\n",
+      "OMK     4.205  600.17224\n",
+      "OSL       0.0     1013.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(get_obssite_dataframe())"
    ]
@@ -115,7 +168,18 @@
    "execution_count": null,
    "id": "11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['LSST', 'CTIO', 'OHP', 'ZTF', 'VLT', 'PDM', 'OMK', 'OSL'], dtype='object')"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.index"
    ]
@@ -125,7 +189,26 @@
    "execution_count": null,
    "id": "12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     True\n",
+       "1    False\n",
+       "2    False\n",
+       "3    False\n",
+       "4    False\n",
+       "5    False\n",
+       "6    False\n",
+       "7    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_obssite_keys('lsst')"
    ]
@@ -153,7 +236,18 @@
    "execution_count": null,
    "id": "15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.True_"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_obssite('LSST')"
    ]
@@ -163,7 +257,18 @@
    "execution_count": null,
    "id": "16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.True_"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_obssite('AUXTEL')"
    ]
@@ -191,7 +296,18 @@
    "execution_count": null,
    "id": "19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Atmospheric emulator ObsAtmo for observation site LSST'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.Name"
    ]
@@ -211,7 +327,18 @@
    "execution_count": null,
    "id": "21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Atmospheric emulator ObsAtmo for observation site CTIO'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.Name"
    ]
@@ -231,7 +358,18 @@
    "execution_count": null,
    "id": "23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Atmospheric emulator ObsAtmo for observation site LSST'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.Name"
    ]
@@ -251,7 +389,18 @@
    "execution_count": null,
    "id": "25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Atmospheric emulator ObsAtmo for observation site LSST'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.Name"
    ]
@@ -283,7 +432,16 @@
    "execution_count": null,
    "id": "28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wavelengths (nm) \t =  [400.0, 800.0, 900.0]\n",
+      "transmissions    \t =  [0.72485491 0.97330618 0.85675228]\n"
+     ]
+    }
+   ],
    "source": [
     "    >>> print(\"wavelengths (nm) \\t = \",wl)\n",
     "    >>> print(\"transmissions    \\t = \",transm)    "
@@ -294,7 +452,15 @@
    "execution_count": null,
    "id": "29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[400.0, 800.0, 900.0]\n"
+     ]
+    }
+   ],
    "source": [
     "print(wl)"
    ]
@@ -304,7 +470,15 @@
    "execution_count": null,
    "id": "30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.72485491 0.97330618 0.85675228]\n"
+     ]
+    }
+   ],
    "source": [
     "print(transm)"
    ]
@@ -325,7 +499,18 @@
    "execution_count": null,
    "id": "32",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.41483073, 0.76797745, 0.95170851, 0.98476396, 0.9937721 ])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "array"
    ]
@@ -343,7 +528,20 @@
    "execution_count": null,
    "id": "34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([300.        , 301.00125156, 302.00250313, 303.00375469,\n",
+       "       304.00500626, 305.00625782, 306.00750939, 307.00876095,\n",
+       "       308.01001252, 309.01126408])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.WL[0:10]"
    ]
@@ -353,7 +551,20 @@
    "execution_count": null,
    "id": "35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1090.98873592, 1091.98998748, 1092.99123905, 1093.99249061,\n",
+       "       1094.99374218, 1095.99499374, 1096.99624531, 1097.99749687,\n",
+       "       1098.99874844, 1100.        ])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.WL[-10:]"
    ]
@@ -363,7 +574,19 @@
    "execution_count": null,
    "id": "36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1. , 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2. , 2.1, 2.2,\n",
+       "       2.3, 2.4, 2.5, 2.6])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.AIRMASS"
    ]
@@ -373,7 +596,27 @@
    "execution_count": null,
    "id": "37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.  ,  0.25,  0.5 ,  0.75,  1.  ,  1.25,  1.5 ,  1.75,  2.  ,\n",
+       "        2.25,  2.5 ,  2.75,  3.  ,  3.25,  3.5 ,  3.75,  4.  ,  4.25,\n",
+       "        4.5 ,  4.75,  5.  ,  5.25,  5.5 ,  5.75,  6.  ,  6.25,  6.5 ,\n",
+       "        6.75,  7.  ,  7.25,  7.5 ,  7.75,  8.  ,  8.25,  8.5 ,  8.75,\n",
+       "        9.  ,  9.25,  9.5 ,  9.75, 10.  , 10.25, 10.5 , 10.75, 11.  ,\n",
+       "       11.25, 11.5 , 11.75, 12.  , 12.25, 12.5 , 12.75, 13.  , 13.25,\n",
+       "       13.5 , 13.75, 14.  , 14.25, 14.5 , 14.75, 15.  , 15.25, 15.5 ,\n",
+       "       15.75, 16.  , 16.25, 16.5 , 16.75, 17.  , 17.25, 17.5 , 17.75,\n",
+       "       18.  , 18.25, 18.5 , 18.75, 19.  , 19.25, 19.5 , 19.75, 20.  ,\n",
+       "       20.25])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.PWV"
    ]
@@ -383,7 +626,20 @@
    "execution_count": null,
    "id": "38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0.,  25.,  50.,  75., 100., 125., 150., 175., 200., 225., 250.,\n",
+       "       275., 300., 325., 350., 375., 400., 425., 450., 475., 500., 525.,\n",
+       "       550., 575., 600., 625.])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emul.OZ"
    ]
@@ -399,9 +655,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_py312_getobsatmo",
+   "display_name": "conda_py314",
    "language": "python",
-   "name": "conda_py312_getobsatmo"
+   "name": "conda_py314"
   },
   "language_info": {
    "codemirror_mode": {
@@ -413,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.14.0"
   },
   "vscode": {
    "interpreter": {
